bug: render mode z-index fixes

--- a/packages/dockview-core/src/dnd/overlay.scss
+++ b/packages/dockview-core/src/dnd/overlay.scss
@@ -30,7 +30,7 @@
     z-index: 997;
 
     &.dv-bring-to-front {
-        z-index: 998;
+        z-index: 999;
     }
 
     border: 1px solid var(--dv-tab-divider-color);
